Added social media bar

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 	<body>
-		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 		<nav><ul class="nav"><li><a href="/">Taylor</a></li><li><a href="/family.html">Family</a></li><li><a href="/ethel.html">Ethel</a></li></ul></nav>
 		<div class="content">
+		</div>
+
+		<div class="social-media">
+			<p><a target="_blank" href="http://www.twitter.com/"><img src="images/twitter.png"></a><br><a target="_blank" href="http://www.facebook.com"><img src="images/fb.png"></a><br><a target="_blank" href="https://www.linkedin.com/in/taylormeluch"><img src="images/in.png"/a><br></p>
 		</div>
 	</body>
 </html>
