--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 	<body>
-		<nav><ul class="nav"><li><a href="/">Taylor</a></li><li><a href="/family.html">Family</a></li><li><a href="/ethel.html">Ethel</a></li></ul></nav>
+		<nav><ul class="nav"><li><a href="index.html">Taylor</a></li><li><a href="family.html">Family</a></li><li><a href="/ethel.html">Ethel</a></li></ul></nav>
 		<div class="content">
 			<h1>TAYLOR</h2>
 			<img src="images/briantay.jpg">
