--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</div>
 
 		<div class="social-media">
-			<a target="_blank" href="http://www.twitter.com/"><img src="images/twitter.png"></a><br><a target="_blank" href="http://www.facebook.com"><img src="images/fb.png"></a><br><a target="_blank" href="https://www.linkedin.com/in/taylormeluch"><img src="images/in.png"/a><br>
+			<a target="_blank" href="http://www.twitter.com/"><img src="images/twitter.png"></a><br><a target="_blank" href="http://www.facebook.com"><img src="images/fb.png"></a><br><a target="_blank" href="https://www.linkedin.com/"><img src="images/in.png"/a><br>
 		</div>
 	</body>
 </html>
