--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 	<body>
-		<nav><ul class="nav"><li><a href="index.html">Taylor</a></li><li><a href="family.html">Family</a></li><li><a href="/ethel.html">Ethel</a></li></ul></nav>
+		<nav><ul class="nav"><li><a href="index.html">Taylor</a></li><li><a href="family.html">Family</a></li><li><a href="ethel.html">Ethel</a></li></ul></nav>
 		<div class="content">
 			<h1>TAYLOR</h2>
-			<img src="images/briantay.jpg">
+			<img src="images/bryantay.jpg">
 			<div class="paddedtext"><p>Taylor Meluch was born and raised in Cleveland, Ohio. She moved to Pittsburgh, Pennsylvania in 2008 to attend design school which lead to her living there for six years in a big house with four best friends and her cat, Ethel. She worked as a Graphic Designer at a marketing company until accepting a position at the 9/11 Tribute Center in New York City.</p>
 
 			<p>Taylor is still new to New York City and enjoys exploring new neighborhoods to try and find fun restaurants and bars with her boyfriend Bryan. She lives in the East Village and accepts any recommendations.</p>
